pgrx-tests/tests/compile-fail/array-as-non-mutable-args.stderr
error[E0277]: cannot generate SQL schema for this function
 --> tests/compile-fail/array-as-non-mutable-args.rs:7:1
  |
6 | #[pg_extern]
  | ------------ in this procedural macro expansion
7 | fn something<'a>(_arr: &mut FlatArray<'a, i32>) {
  | ^^ some types in for<'b, 'a> fn(&'b mut FlatArray<'a, i32>) cannot be translated to SQL
  |
  = help: the trait `FunctionMetadata<_>` is not implemented for `for<'b, 'a> fn(&'b mut FlatArray<'a, i32>)`
  = note: this error originates in the attribute macro `pg_extern` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: `&mut FlatArray<'_, i32>` has no representation in SQL
 --> tests/compile-fail/array-as-non-mutable-args.rs:6:1
  |
6 | #[pg_extern]
  | ^^^^^^^^^^^^ non-SQL type
  |
  = note: the following trait bounds were not satisfied:
          `&mut FlatArray<'_, i32>: SqlTranslatable`
          which is required by `&&mut FlatArray<'_, i32>: SqlTranslatable`
  = note: this error originates in the attribute macro `pg_extern` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: `&mut FlatArray<'_, i32>` cannot be passed into a Postgres function as a Datum
 --> tests/compile-fail/array-as-non-mutable-args.rs:7:18
  |
6 | #[pg_extern]
  | ------------ in this procedural macro expansion
7 | fn something<'a>(_arr: &mut FlatArray<'a, i32>) {
  |                  ^^^^ the trait `ArgAbi<'_>` is not implemented for `&mut FlatArray<'_, i32>`
  |
  = help: the following other types implement trait `ArgAbi<'fcx>`:
            &'fcx T
            &'fcx [u8]
            &'fcx str
            &MemCx<'fcx>
            *mut FunctionCallInfoBaseData
            AnyArray
            AnyElement
            AnyNumeric
          and $N others
  = note: `ArgAbi<'_>` is implemented for `&FlatArray<'_, i32>`, but not for `&mut FlatArray<'_, i32>`
note: required by a bound in `pgrx::callconv::Args::<'a, 'fcx>::next_arg_unchecked`
 --> $WORKSPACE/pgrx/src/callconv.rs
  |
  |     pub unsafe fn next_arg_unchecked<T: ArgAbi<'fcx>>(&mut self) -> Option<T> {
  |                                         ^^^^^^^^^^^^ required by this bound in `Args::<'a, 'fcx>::next_arg_unchecked`
  = note: this error originates in the attribute macro `pg_extern` (in Nightly builds, run with -Z macro-backtrace for more info)
